Added Data Preprocessing. Updated Notes.md

--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -40,6 +40,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51088 6798 6835\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_dataset), len(valid_dataset), len(test_dataset), )"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
