Finished Data Preprocessing. Updated Notes.md

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -61,23 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Audio to Text Transformations"
+    "# Data Processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/pigeon_gcc/anaconda3/envs/asr_project/lib/python3.9/site-packages/torchaudio/functional/functional.py:571: UserWarning: At least one mel filterbank has all zero values. The value for `n_mels` (128) may be set too high. Or, the value for `n_freqs` (201) may be set too low.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "char_map_str = \"\"\"\n",
     " a 0\n",
@@ -143,29 +134,29 @@
     "\n",
     "valid_audio_transforms = torchaudio.transforms.MelSpectrogram()\n",
     "\n",
-    "text_transform = TextTransform()\n",
-    "\n",
-    "\n"
+    "text_transform = TextTransform()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2]\n",
-      "'bgtaj'\n"
+      "yes --> [24, 4, 18] --> yes\n"
      ]
     }
    ],
    "source": [
     "# testing the code above\n",
-    "pprint(text_transform.text_to_int('abc'))\n",
-    "pprint(text_transform.int_to_text([1, 6, 19, 0, 9]))"
+    "word_start = \"yes\"\n",
+    "index = text_transform.text_to_int(word_start)\n",
+    "word_recovered = text_transform.int_to_text(index)\n",
+    "\n",
+    "print(word_start, \"-->\", index, \"-->\", word_recovered)"
    ]
   },
   {
@@ -180,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +184,7 @@
        " 1)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +250,7 @@
        " [3])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +258,14 @@
    "source": [
     "# testing\n",
     "data_processing((sample,))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building a Model"
    ]
   },
   {
