Added Layer Normalization. Updated Notes.md

--- a/model.ipynb
+++ b/model.ipynb
@@ -269,6 +269,68 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use Layer Normalization, not Batch Normalization, because BN is hard to use with sequence data, with small batch sizes, and it's hard to paralellize a NN with BN.\n",
+    "\n",
+    "This is due to the dependency on batches. Layer Normalization removes this dependency. It computes the normalization based on the layers inside of the batches.\n",
+    "\n",
+    "LN briefly: Input values in all neurons in the same layer are normalized for each data sample.\n",
+    "So, all values in neurons of the same layer will have the same mean and variance.\n",
+    "\n",
+    "LN is can deal with sequence data, doesn't depend on batch size, and is easily paralellized.\n",
+    "However, LN sometimes performs worse than BN with CNNs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNNLayerNorm(nn.Module):\n",
+    "    \"\"\" Layer Normalization \"\"\"\n",
+    "    \n",
+    "    def __init__(self, n_feats):\n",
+    "        super(CNNLayerNorm, self).__init__()\n",
+    "        self.layer_norm = nn.LayerNorm(normalized_shape=n_feats)\n",
+    "        \"\"\"\n",
+    "        About normalized_shape parameter of nn.LayerNorm:\n",
+    "        If a single integer is used, it is treated as a singleton list, and this module will normalize\n",
+    "        over the last dimension which is expected to be of that specific size.\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x (batch, channel, feature, time)\n",
+    "        x = x.transpose(2, 3).contiguous() # (batch, channel, time, feature)\n",
+    "        x = self.layer_norm(x)\n",
+    "        return x.transpose(2, 3).contiguous() # (batch, channel, feature, time) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
