--- a/model.ipynb
+++ b/model.ipynb
@@ -291,13 +291,12 @@
    "outputs": [],
    "source": [
     "class CNNLayerNorm(nn.Module):\n",
-    "    \"\"\" Layer Normalization \"\"\"\n",
+    "    \"\"\"Layer Normalization\"\"\"\n",
     "    \n",
-    "    def __init__(self, n_feats):\n",
+    "    def __init__(self, n_features):\n",
     "        super(CNNLayerNorm, self).__init__()\n",
-    "        self.layer_norm = nn.LayerNorm(normalized_shape=n_feats)\n",
-    "        \"\"\"\n",
-    "        About normalized_shape parameter of nn.LayerNorm:\n",
+    "        self.layer_norm = nn.LayerNorm(normalized_shape=n_features)\n",
+    "        \"\"\"About normalized_shape parameter of nn.LayerNorm:\n",
     "        If a single integer is used, it is treated as a singleton list, and this module will normalize\n",
     "        over the last dimension which is expected to be of that specific size.\n",
     "        \"\"\"\n",
@@ -309,65 +308,71 @@
     "        return x.transpose(2, 3).contiguous() # (batch, channel, feature, time) \n",
     "\n",
     "class ResidualCNN(nn.Module):\n",
-    "    \"\"\"Residual CNN inspired by https://arxiv.org/pdf/1603.05027.pdf\n",
-    "        except with layer norm instead of batch norm\n",
-    "    \"\"\"\n",
-    "    def __init__(self, in_channels, out_channels, kernel, stride, dropout, n_feats):\n",
+    "    \"\"\" Residual CNN inspired by https://arxiv.org/pdf/1603.05027.pdf\n",
+    "        except with layer norm instead of batch norm \"\"\"\n",
+    "    \n",
+    "    def __init__(self, in_channels, out_channels, kernel, stride, dropout, n_features):\n",
     "        super(ResidualCNN, self).__init__()\n",
     "\n",
-    "        self.cnn1 = nn.Conv2d(in_channels, out_channels, kernel, stride, padding=kernel//2)\n",
-    "        self.cnn2 = nn.Conv2d(out_channels, out_channels, kernel, stride, padding=kernel//2)\n",
+    "        self.layer_norm1 = CNNLayerNorm(n_features)\n",
     "        self.dropout1 = nn.Dropout(dropout)\n",
+    "        self.cnn1 = nn.Conv2d(in_channels, out_channels, kernel, stride, padding=kernel//2)\n",
+    "\n",
+    "        self.layer_norm2 = CNNLayerNorm(n_features)\n",
     "        self.dropout2 = nn.Dropout(dropout)\n",
-    "        self.layer_norm1 = CNNLayerNorm(n_feats)\n",
-    "        self.layer_norm2 = CNNLayerNorm(n_feats)\n",
+    "        self.cnn2 = nn.Conv2d(out_channels, out_channels, kernel, stride, padding=kernel//2)\n",
     "\n",
     "    def forward(self, x):\n",
     "        residual = x  # (batch, channel, feature, time)\n",
-    "        x = self.layer_norm1(x)\n",
-    "        x = F.gelu(x)\n",
-    "        x = self.dropout1(x)\n",
-    "        x = self.cnn1(x)\n",
-    "        x = self.layer_norm2(x)\n",
-    "        x = F.gelu(x)\n",
-    "        x = self.dropout2(x)\n",
-    "        x = self.cnn2(x)\n",
-    "        x += residual\n",
-    "        return x # (batch, channel, feature, time)\n",
+    "        out = self.layer_norm1(x)\n",
+    "        out = F.gelu(out)\n",
+    "        out = self.dropout1(out)\n",
+    "        out = self.cnn1(out)\n",
+    "        out = self.layer_norm2(out)\n",
+    "        out = F.gelu(out)\n",
+    "        out = self.dropout2(out)\n",
+    "        out = self.cnn2(out)\n",
+    "        out += residual\n",
+    "        return out # (batch, channel, feature, time)\n",
     "        \n",
     "class BidirectionalGRU(nn.Module):\n",
     "\n",
     "    def __init__(self, rnn_dim, hidden_size, dropout, batch_first):\n",
     "        super(BidirectionalGRU, self).__init__()\n",
     "\n",
+    "        self.layer_norm = nn.LayerNorm(rnn_dim)\n",
     "        self.BiGRU = nn.GRU(\n",
     "            input_size=rnn_dim, hidden_size=hidden_size,\n",
     "            num_layers=1, batch_first=batch_first, bidirectional=True)\n",
-    "        self.layer_norm = nn.LayerNorm(rnn_dim)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = self.layer_norm(x)\n",
-    "        x = F.gelu(x)\n",
-    "        x, _ = self.BiGRU(x)\n",
-    "        x = self.dropout(x)\n",
-    "        return x\n",
+    "        out = self.layer_norm(x)\n",
+    "        out = F.gelu(out)\n",
+    "        out, _ = self.BiGRU(out)\n",
+    "        out = self.dropout(out)\n",
+    "        return out\n",
     "\n",
     "\n",
     "class SpeechRecognitionModel(nn.Module):\n",
     "    \"\"\"Speech Recognition Model Inspired by DeepSpeech 2\"\"\"\n",
     "\n",
-    "    def __init__(self, n_cnn_layers, n_rnn_layers, rnn_dim, n_class, n_feats, stride=2, dropout=0.1):\n",
+    "    def __init__(self, n_cnn_layers, n_rnn_layers, rnn_dim, n_class, n_features, stride=2, dropout=0.1):\n",
     "        super(SpeechRecognitionModel, self).__init__()\n",
-    "        n_feats = n_feats//2\n",
-    "        self.cnn = nn.Conv2d(1, 32, 3, stride=stride, padding=3//2)  # cnn for extracting heirachal features\n",
+    "        n_features = n_features // 2\n",
+    "\n",
+    "        # TODO: чзх эта cnn тут забыла?\n",
+    "        self.cnn = nn.Conv2d(1, 32, 3, stride=stride, padding=3 // 2)  # cnn for extracting heirachal features\n",
     "\n",
     "        # n residual cnn layers with filter size of 32\n",
     "        self.rescnn_layers = nn.Sequential(*[\n",
-    "            ResidualCNN(32, 32, kernel=3, stride=1, dropout=dropout, n_feats=n_feats) \n",
+    "            ResidualCNN(32, 32, kernel=3, stride=1, dropout=dropout, n_features=n_features) \n",
     "            for _ in range(n_cnn_layers)\n",
     "        ])\n",
-    "        self.fully_connected = nn.Linear(n_feats*32, rnn_dim)\n",
+    "        self.fully_connected = nn.Linear(n_features*32, rnn_dim)\n",
+    "        \"\"\"TODO: как я понял, у нас число фичей rnn_dim берётся одиночное для первой GRU, т.к. к ней не перетекает скрытое состояние.\n",
+    "        Каждая следующая GRU получает 2*rnn_dim фичей, т.к. к самим фичам конкатенируется скрытое состояние такой же размерности (hidden_size=rnn_dim)\n",
+    "        \"\"\"\n",
     "        self.birnn_layers = nn.Sequential(*[\n",
     "            BidirectionalGRU(rnn_dim=rnn_dim if i==0 else rnn_dim*2,\n",
     "                             hidden_size=rnn_dim, dropout=dropout, batch_first=i==0)\n",
