--- a/model.ipynb
+++ b/model.ipynb
@@ -2,22 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
+    "import torch.utils.data as data\n",
+    "import torch.nn.functional as F\n",
     "import torchaudio\n",
-    "import sys\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import IPython.display as ipd\n",
-    "\n",
-    "from tqdm import tqdm\n",
-    "from pprint import pprint"
+    "from comet_ml import Experiment\n",
+    "import os"
    ]
   },
   {
@@ -34,9 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./', url='speech_commands_v0.01', download=True, subset='training')\n",
-    "valid_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./', url='speech_commands_v0.01', download=True, subset='validation')\n",
-    "test_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./', url='speech_commands_v0.01', download=True, subset='testing')"
+    "def download_data():\n",
+    "    if not os.path.isdir(\"./data\"):\n",
+    "        os.makedirs(\"./data\")\n",
+    "\n",
+    "    train_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='training')\n",
+    "    valid_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='validation')\n",
+    "    test_dataset = torchaudio.datasets.SPEECHCOMMANDS(root='./data', url='speech_commands_v0.01', download=True, subset='testing')\n",
+    "    return train_dataset, valid_dataset, test_dataset"
    ]
   },
   {
@@ -53,6 +55,7 @@
     }
    ],
    "source": [
+    "train_dataset, valid_dataset, test_dataset = download_data()\n",
     "print(len(train_dataset), len(valid_dataset), len(test_dataset), )"
    ]
   },
@@ -71,33 +74,35 @@
    "outputs": [],
    "source": [
     "char_map_str = \"\"\"\n",
-    " a 0\n",
-    " b 1\n",
-    " c 2\n",
-    " d 3\n",
-    " e 4\n",
-    " f 5\n",
-    " g 6\n",
-    " h 7\n",
-    " i 8\n",
-    " j 9\n",
-    " k 10\n",
-    " l 11\n",
-    " m 12\n",
-    " n 13\n",
-    " o 14\n",
-    " p 15\n",
-    " q 16\n",
-    " r 17\n",
-    " s 18\n",
-    " t 19\n",
-    " u 20\n",
-    " v 21\n",
-    " w 22\n",
-    " x 23\n",
-    " y 24\n",
-    " z 25\n",
-    " \"\"\"\n",
+    "a 0\n",
+    "b 1\n",
+    "c 2\n",
+    "d 3\n",
+    "e 4\n",
+    "f 5\n",
+    "g 6\n",
+    "h 7\n",
+    "i 8\n",
+    "j 9\n",
+    "k 10\n",
+    "l 11\n",
+    "m 12\n",
+    "n 13\n",
+    "o 14\n",
+    "p 15\n",
+    "q 16\n",
+    "r 17\n",
+    "s 18\n",
+    "t 19\n",
+    "u 20\n",
+    "v 21\n",
+    "w 22\n",
+    "x 23\n",
+    "y 24\n",
+    "z 25\n",
+    "\"\"\"\n",
+    "\n",
+    "BLANK_LABEL = 26\n",
     " \n",
     "class TextTransform:\n",
     "    \"\"\" Maps characters to their indices, and vice versa \"\"\"\n",
@@ -164,9 +169,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Функция __data_processing__ будет позже вызвана в __collate_fn__ дата лоадеров.\n",
+    "The function __data_processing()__ will be called in Data Loaders' __collate_fn__.\n",
     "\n",
-    "Формат данных в датасете: tuple (wave, sample_rate, utterance (label), speaker id, utterance number)"
+    "Data is represented as tuple(wave, sample_rate, utterance (label), speaker id, utterance number)"
    ]
   },
   {
@@ -265,7 +270,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## CER - Character Error Rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _levenshtein_distance(ref, hyp):\n",
+    "    \"\"\"Levenshtein distance is a string metric for measuring the difference\n",
+    "    between two sequences. Informally, the levenshtein disctance is defined as\n",
+    "    the minimum number of single-character edits (substitutions, insertions or\n",
+    "    deletions) required to change one word into the other. We can naturally\n",
+    "    extend the edits to word level when calculate levenshtein disctance for\n",
+    "    two sentences.\n",
+    "    \"\"\"\n",
+    "    m = len(ref)\n",
+    "    n = len(hyp)\n",
+    "\n",
+    "    # special case\n",
+    "    if ref == hyp:\n",
+    "        return 0\n",
+    "    if m == 0:\n",
+    "        return n\n",
+    "    if n == 0:\n",
+    "        return m\n",
+    "\n",
+    "    if m < n:\n",
+    "        ref, hyp = hyp, ref\n",
+    "        m, n = n, m\n",
+    "\n",
+    "    # use O(min(m, n)) space\n",
+    "    distance = np.zeros((2, n + 1), dtype=np.int32)\n",
+    "\n",
+    "    # initialize distance matrix\n",
+    "    for j in range(0,n + 1):\n",
+    "        distance[0][j] = j\n",
+    "\n",
+    "    # calculate levenshtein distance\n",
+    "    for i in range(1, m + 1):\n",
+    "        prev_row_idx = (i - 1) % 2\n",
+    "        cur_row_idx = i % 2\n",
+    "        distance[cur_row_idx][0] = i\n",
+    "        for j in range(1, n + 1):\n",
+    "            if ref[i - 1] == hyp[j - 1]:\n",
+    "                distance[cur_row_idx][j] = distance[prev_row_idx][j - 1]\n",
+    "            else:\n",
+    "                s_num = distance[prev_row_idx][j - 1] + 1\n",
+    "                i_num = distance[cur_row_idx][j - 1] + 1\n",
+    "                d_num = distance[prev_row_idx][j] + 1\n",
+    "                distance[cur_row_idx][j] = min(s_num, i_num, d_num)\n",
+    "\n",
+    "    return distance[m % 2][n]\n",
+    "\n",
+    "\n",
+    "def char_errors(reference, hypothesis, ignore_case=False, remove_space=False):\n",
+    "    \"\"\"Compute the levenshtein distance between reference sequence and\n",
+    "    hypothesis sequence in char-level.\n",
+    "    :param reference: The reference sentence.\n",
+    "    :type reference: basestring\n",
+    "    :param hypothesis: The hypothesis sentence.\n",
+    "    :type hypothesis: basestring\n",
+    "    :param ignore_case: Whether case-sensitive or not.\n",
+    "    :type ignore_case: bool\n",
+    "    :param remove_space: Whether remove internal space characters\n",
+    "    :type remove_space: bool\n",
+    "    :return: Levenshtein distance and length of reference sentence.\n",
+    "    :rtype: list\n",
+    "    \"\"\"\n",
+    "    if ignore_case == True:\n",
+    "        reference = reference.lower()\n",
+    "        hypothesis = hypothesis.lower()\n",
+    "\n",
+    "    join_char = ' '\n",
+    "    if remove_space == True:\n",
+    "        join_char = ''\n",
+    "\n",
+    "    reference = join_char.join(filter(None, reference.split(' ')))\n",
+    "    hypothesis = join_char.join(filter(None, hypothesis.split(' ')))\n",
+    "\n",
+    "    edit_distance = _levenshtein_distance(reference, hypothesis)\n",
+    "    return float(edit_distance), len(reference)\n",
+    "\n",
+    "\n",
+    "def cer(reference, hypothesis, ignore_case=False, remove_space=False):\n",
+    "    \"\"\"Calculate charactor error rate (CER). CER compares reference text and\n",
+    "    hypothesis text in char-level. CER is defined as:\n",
+    "    .. math::\n",
+    "        CER = (Sc + Dc + Ic) / Nc\n",
+    "    where\n",
+    "    .. code-block:: text\n",
+    "        Sc is the number of characters substituted,\n",
+    "        Dc is the number of characters deleted,\n",
+    "        Ic is the number of characters inserted\n",
+    "        Nc is the number of characters in the reference\n",
+    "    We can use levenshtein distance to calculate CER. Chinese input should be\n",
+    "    encoded to unicode. Please draw an attention that the leading and tailing\n",
+    "    space characters will be truncated and multiple consecutive space\n",
+    "    characters in a sentence will be replaced by one space character.\n",
+    "    :param reference: The reference sentence.\n",
+    "    :type reference: basestring\n",
+    "    :param hypothesis: The hypothesis sentence.\n",
+    "    :type hypothesis: basestring\n",
+    "    :param ignore_case: Whether case-sensitive or not.\n",
+    "    :type ignore_case: bool\n",
+    "    :param remove_space: Whether remove internal space characters\n",
+    "    :type remove_space: bool\n",
+    "    :return: Character error rate.\n",
+    "    :rtype: float\n",
+    "    :raises ValueError: If the reference length is zero.\n",
+    "    \"\"\"\n",
+    "    edit_distance, ref_len = char_errors(reference, hypothesis, ignore_case,\n",
+    "                                         remove_space)\n",
+    "\n",
+    "    if ref_len == 0:\n",
+    "        raise ValueError(\"Length of reference should be greater than 0.\")\n",
+    "\n",
+    "    cer = float(edit_distance) / ref_len\n",
+    "    return cer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Building a Model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NN Architecture"
    ]
   },
   {
@@ -361,7 +501,7 @@
     "        super(SpeechRecognitionModel, self).__init__()\n",
     "        n_features = n_features // 2\n",
     "\n",
-    "        # TODO: чзх эта cnn тут забыла?\n",
+    "        # TODO: чзх этот conv слой тут забыл?\n",
     "        self.cnn = nn.Conv2d(1, 32, 3, stride=stride, padding=3 // 2)  # cnn for extracting heirachal features\n",
     "\n",
     "        # n residual cnn layers with filter size of 32\n",
@@ -398,32 +538,231 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Decoder"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def GreedyDecoder(output, labels, label_lengths, blank_label=BLANK_LABEL, collapse_repeated=True):\n",
+    "    arg_maxes = torch.argmax(output, dim=2)\n",
+    "    decodes = []\n",
+    "    targets = []\n",
+    "    for i, args in enumerate(arg_maxes):\n",
+    "        decode = []\n",
+    "        targets.append(text_transform.int_to_text(labels[i][:label_lengths[i]].tolist()))\n",
+    "        for j, index in enumerate(args):\n",
+    "            if index != blank_label:\n",
+    "                if collapse_repeated and j != 0 and index == args[j -1]:\n",
+    "                    continue\n",
+    "                decode.append(index.item())\n",
+    "        decodes.append(text_transform.int_to_text(decode))\n",
+    "    return decodes, targets"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class IterMeter(object):\n",
+    "    \"\"\"Keeps track of total iterations. Used for Comet.ml\"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.val = 0\n",
+    "\n",
+    "    def step(self):\n",
+    "        self.val += 1\n",
+    "\n",
+    "    def get(self):\n",
+    "        return self.val\n",
+    "\n",
+    "\n",
+    "def train(model, device, train_loader, criterion, optimizer, scheduler, epoch, iter_meter, experiment):\n",
+    "    model.train()\n",
+    "    data_len = len(train_loader.dataset)\n",
+    "    with experiment.train():\n",
+    "        for batch_idx, _data in enumerate(train_loader):\n",
+    "            spectrograms, labels, input_lengths, label_lengths = _data \n",
+    "            spectrograms, labels = spectrograms.to(device), labels.to(device)\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            output = model(spectrograms)  # (batch, time, n_class)\n",
+    "            output = F.log_softmax(output, dim=2)\n",
+    "            output = output.transpose(0, 1) # (time, batch, n_class)\n",
+    "\n",
+    "            loss = criterion(output, labels, input_lengths, label_lengths)\n",
+    "            loss.backward()\n",
+    "\n",
+    "            experiment.log_metric('loss', loss.item(), step=iter_meter.get())\n",
+    "            experiment.log_metric('learning_rate', scheduler.get_lr(), step=iter_meter.get())\n",
+    "\n",
+    "            optimizer.step()\n",
+    "            scheduler.step()\n",
+    "            iter_meter.step()\n",
+    "\n",
+    "            if batch_idx % 100 == 0 or batch_idx == data_len:\n",
+    "                print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "                    epoch, batch_idx * len(spectrograms), data_len,\n",
+    "                    100. * batch_idx / len(train_loader), loss.item()))\n",
+    "\n",
+    "\n",
+    "def test(model, device, test_loader, criterion, epoch, iter_meter, experiment):\n",
+    "    print('\\nEvaluating…')\n",
+    "    model.eval()\n",
+    "    test_loss = 0\n",
+    "    test_cer = []\n",
+    "    with experiment.test():\n",
+    "        with torch.no_grad():\n",
+    "            for I, _data in enumerate(test_loader):\n",
+    "                spectrograms, labels, input_lengths, label_lengths = _data \n",
+    "                spectrograms, labels = spectrograms.to(device), labels.to(device)\n",
+    "\n",
+    "                output = model(spectrograms)  # (batch, time, n_class)\n",
+    "                output = F.log_softmax(output, dim=2)\n",
+    "                output = output.transpose(0, 1) # (time, batch, n_class)\n",
+    "\n",
+    "                loss = criterion(output, labels, input_lengths, label_lengths)\n",
+    "                test_loss += loss.item() / len(test_loader)\n",
+    "\n",
+    "                decoded_preds, decoded_targets = GreedyDecoder(output.transpose(0, 1), labels, label_lengths)\n",
+    "                for j in range(len(decoded_preds)):\n",
+    "                    test_cer.append(cer(decoded_targets[j], decoded_preds[j]))\n",
+    "\n",
+    "\n",
+    "    avg_cer = sum(test_cer)/len(test_cer)\n",
+    "    experiment.log_metric('test_loss', test_loss, step=iter_meter.get())\n",
+    "    experiment.log_metric('cer', avg_cer, step=iter_meter.get())\n",
+    "\n",
+    "    print('Test set: Average loss: {:.4f}, Average CER: {:4f} Average WER: {:.4f}\\n'.format(test_loss, avg_cer, avg_wer))\n",
+    "\n",
+    "def main(hparams, experiment=Experiment(api_key='dummy_key', disabled=True)):\n",
+    "\n",
+    "    experiment.log_parameters(hparams)\n",
+    "\n",
+    "    use_cuda = torch.cuda.is_available()\n",
+    "    torch.manual_seed(7)\n",
+    "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
+    "\n",
+    "    train_dataset, valid_dataset, test_dataset = download_data()\n",
+    "\n",
+    "    kwargs = {'num_workers': 1, 'pin_memory': True} if use_cuda else {}\n",
+    "    train_loader = data.DataLoader(dataset=train_dataset,\n",
+    "                                batch_size=hparams['batch_size'],\n",
+    "                                shuffle=True,\n",
+    "                                collate_fn=lambda x: data_processing(x, 'train'),\n",
+    "                                **kwargs)\n",
+    "    test_loader = data.DataLoader(dataset=test_dataset,\n",
+    "                                batch_size=hparams['batch_size'],\n",
+    "                                shuffle=False,\n",
+    "                                collate_fn=lambda x: data_processing(x, 'test'),\n",
+    "                                **kwargs)\n",
+    "\n",
+    "    model = SpeechRecognitionModel(\n",
+    "        hparams['n_cnn_layers'], hparams['n_rnn_layers'], hparams['rnn_dim'],\n",
+    "        hparams['n_class'], hparams['n_feats'], hparams['stride'], hparams['dropout']\n",
+    "        ).to(device)\n",
+    "\n",
+    "    print(model)\n",
+    "    print('Num Model Parameters', sum([param.nelement() for param in model.parameters()]))\n",
+    "\n",
+    "    optimizer = optim.AdamW(model.parameters(), hparams['learning_rate'])\n",
+    "    criterion = nn.CTCLoss(blank=BLANK_LABEL).to(device)\n",
+    "    scheduler = optim.lr_scheduler.OneCycleLR(optimizer, max_lr=hparams['learning_rate'], \n",
+    "                                            steps_per_epoch=int(len(train_loader)),\n",
+    "                                            epochs=hparams['epochs'],\n",
+    "                                            anneal_strategy='linear')\n",
+    "\n",
+    "    iter_meter = IterMeter()\n",
+    "    for epoch in range(1, hparams['epochs'] + 1):\n",
+    "        train(model, device, train_loader, criterion, optimizer, scheduler, epoch, iter_meter, experiment)\n",
+    "        test(model, device, test_loader, criterion, epoch, iter_meter, experiment)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experiments are monitored using Comet.ml:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "comet_api_key = \"KddYvSKPDO9U8K1lZUIUCgHjT\"\n",
+    "project_name = \"speech-recognition\"\n",
+    "experiment_name = \"asr-0\"\n",
+    "\n",
+    "# comet_api_key = \"\"\n",
+    "# project_name = \"speechrecognition\"\n",
+    "# experiment_name = \"speechrecognition-colab\"\n",
+    "\n",
+    "if comet_api_key:\n",
+    "    experiment = Experiment(api_key=comet_api_key, project_name=project_name, parse_args=False)\n",
+    "    experiment.set_name(experiment_name)\n",
+    "    experiment.display()\n",
+    "else:\n",
+    "    experiment = Experiment(api_key='dummy_key', disabled=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the training loop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hparams = {\n",
+    "    \"n_cnn_layers\": 3,\n",
+    "    \"n_rnn_layers\": 5,\n",
+    "    \"rnn_dim\": 512,\n",
+    "    \"n_class\": 26,\n",
+    "    \"n_feats\": 128,\n",
+    "    \"stride\": 2,\n",
+    "    \"dropout\": 0.1,\n",
+    "    \"learning_rate\": 5e-4,\n",
+    "    \"batch_size\": 10,\n",
+    "    \"epochs\": 3\n",
+    "}\n",
+    "\n",
+    "main(hparams, experiment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment.end()"
+   ]
   },
   {
    "cell_type": "code",
