Training loop draft

--- a/model.ipynb
+++ b/model.ipynb
@@ -645,12 +645,12 @@
     "                for j in range(len(decoded_preds)):\n",
     "                    test_cer.append(cer(decoded_targets[j], decoded_preds[j]))\n",
     "\n",
-    "\n",
     "    avg_cer = sum(test_cer)/len(test_cer)\n",
     "    experiment.log_metric('test_loss', test_loss, step=iter_meter.get())\n",
     "    experiment.log_metric('cer', avg_cer, step=iter_meter.get())\n",
     "\n",
-    "    print('Test set: Average loss: {:.4f}, Average CER: {:4f} Average WER: {:.4f}\\n'.format(test_loss, avg_cer, avg_wer))\n",
+    "    print('Test set: Average loss: {:.4f}, Average CER: {:4f}\\n'.format(test_loss, avg_cer))\n",
+    "\n",
     "\n",
     "def main(hparams, experiment=Experiment(api_key='dummy_key', disabled=True)):\n",
     "\n",
