--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,41 +69,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pigeon_gcc/anaconda3/envs/asr_project/lib/python3.9/site-packages/torchaudio/functional/functional.py:571: UserWarning: At least one mel filterbank has all zero values. The value for `n_mels` (128) may be set too high. Or, the value for `n_freqs` (201) may be set too low.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "char_map_str = \"\"\"\n",
-    "a 0\n",
-    "b 1\n",
-    "c 2\n",
-    "d 3\n",
-    "e 4\n",
-    "f 5\n",
-    "g 6\n",
-    "h 7\n",
-    "i 8\n",
-    "j 9\n",
-    "k 10\n",
-    "l 11\n",
-    "m 12\n",
-    "n 13\n",
-    "o 14\n",
-    "p 15\n",
-    "q 16\n",
-    "r 17\n",
-    "s 18\n",
-    "t 19\n",
-    "u 20\n",
-    "v 21\n",
-    "w 22\n",
-    "x 23\n",
-    "y 24\n",
-    "z 25\n",
+    "<BLANK> 0\n",
+    "a 1\n",
+    "b 2\n",
+    "c 3\n",
+    "d 4\n",
+    "e 5\n",
+    "f 6\n",
+    "g 7\n",
+    "h 8\n",
+    "i 9\n",
+    "j 10\n",
+    "k 11\n",
+    "l 12\n",
+    "m 13\n",
+    "n 14\n",
+    "o 15\n",
+    "p 16\n",
+    "q 17\n",
+    "r 18\n",
+    "s 19\n",
+    "t 20\n",
+    "u 21\n",
+    "v 22\n",
+    "w 23\n",
+    "x 24\n",
+    "y 25\n",
+    "z 26\n",
     "\"\"\"\n",
     "\n",
-    "BLANK_LABEL = 26\n",
-    " \n",
+    "BLANK_LABEL = None  # to be assigned in TextTranform constructor\n",
+    "\n",
     "class TextTransform:\n",
     "    \"\"\" Maps characters to their indices, and vice versa \"\"\"\n",
     "    def __init__(self):\n",
@@ -113,12 +123,18 @@
     "            ch, index = line.split()\n",
     "            self.char_map[ch] = int(index)\n",
     "            self.index_map[int(index)] = ch\n",
+    "            if not BLANK_LABEL and ch == ' ':\n",
+    "                BLANK_LABEL = int(index)\n",
+    "        self.index_map[BLANK_LABEL] = ' '\n",
     "\n",
     "    def text_to_int(self, text: list[str]):\n",
     "        \"\"\" Use a character map and convert text to an integer sequence \"\"\"\n",
     "        int_sequence = []\n",
     "        for c in text:\n",
-    "            ind = self.char_map[c]\n",
+    "            if c == ' ':\n",
+    "                ind = self.char_map['<BLANK>']\n",
+    "            else:\n",
+    "                ind = self.char_map[c]\n",
     "            int_sequence.append(ind)\n",
     "        return int_sequence\n",
     "\n",
@@ -127,7 +143,7 @@
     "        string = []\n",
     "        for i in labels:\n",
     "            string.append(self.index_map[i])\n",
-    "        return ''.join(string)\n",
+    "        return ''.join(string).replace('<BLANK>', ' ')\n",
     "\n",
     "\n",
     "# TODO: SpecAugment (masking augmentations)\n",
@@ -144,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +205,7 @@
        " 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +271,7 @@
        " [3])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,9 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COMET WARNING: As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n"
+     ]
+    }
+   ],
    "source": [
     "class IterMeter(object):\n",
     "    \"\"\"Keeps track of total iterations. Used for Comet.ml\"\"\"\n",
@@ -735,9 +759,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SpeechRecognitionModel(\n",
+      "  (cnn): Conv2d(1, 32, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1))\n",
+      "  (rescnn_layers): Sequential(\n",
+      "    (0): ResidualCNN(\n",
+      "      (layer_norm1): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout1): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn1): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (layer_norm2): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout2): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn2): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    )\n",
+      "    (1): ResidualCNN(\n",
+      "      (layer_norm1): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout1): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn1): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (layer_norm2): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout2): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn2): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    )\n",
+      "    (2): ResidualCNN(\n",
+      "      (layer_norm1): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout1): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn1): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "      (layer_norm2): CNNLayerNorm(\n",
+      "        (layer_norm): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+      "      )\n",
+      "      (dropout2): Dropout(p=0.1, inplace=False)\n",
+      "      (cnn2): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "    )\n",
+      "  )\n",
+      "  (fully_connected): Linear(in_features=2048, out_features=512, bias=True)\n",
+      "  (birnn_layers): Sequential(\n",
+      "    (0): BidirectionalGRU(\n",
+      "      (layer_norm): LayerNorm((512,), eps=1e-05, elementwise_affine=True)\n",
+      "      (BiGRU): GRU(512, 512, batch_first=True, bidirectional=True)\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (1): BidirectionalGRU(\n",
+      "      (layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (BiGRU): GRU(1024, 512, bidirectional=True)\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (2): BidirectionalGRU(\n",
+      "      (layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (BiGRU): GRU(1024, 512, bidirectional=True)\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (3): BidirectionalGRU(\n",
+      "      (layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (BiGRU): GRU(1024, 512, bidirectional=True)\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "    (4): BidirectionalGRU(\n",
+      "      (layer_norm): LayerNorm((1024,), eps=1e-05, elementwise_affine=True)\n",
+      "      (BiGRU): GRU(1024, 512, bidirectional=True)\n",
+      "      (dropout): Dropout(p=0.1, inplace=False)\n",
+      "    )\n",
+      "  )\n",
+      "  (classifier): Sequential(\n",
+      "    (0): Linear(in_features=1024, out_features=512, bias=True)\n",
+      "    (1): GELU(approximate='none')\n",
+      "    (2): Dropout(p=0.1, inplace=False)\n",
+      "    (3): Linear(in_features=512, out_features=26, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "Num Model Parameters 23703834\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "blank must be in label range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [14], line 14\u001b[0m\n\u001b[1;32m      1\u001b[0m hparams \u001b[39m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mn_cnn_layers\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m3\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mn_rnn_layers\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m5\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m3\u001b[39m\n\u001b[1;32m     12\u001b[0m }\n\u001b[0;32m---> 14\u001b[0m main(hparams, experiment)\n",
+      "Cell \u001b[0;32mIn [12], line 111\u001b[0m, in \u001b[0;36mmain\u001b[0;34m(hparams, experiment)\u001b[0m\n\u001b[1;32m    109\u001b[0m iter_meter \u001b[39m=\u001b[39m IterMeter()\n\u001b[1;32m    110\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, hparams[\u001b[39m'\u001b[39m\u001b[39mepochs\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[0;32m--> 111\u001b[0m     train(model, device, train_loader, criterion, optimizer, scheduler, epoch, iter_meter, experiment)\n\u001b[1;32m    112\u001b[0m     test(model, device, test_loader, criterion, epoch, iter_meter, experiment)\n",
+      "Cell \u001b[0;32mIn [12], line 27\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(model, device, train_loader, criterion, optimizer, scheduler, epoch, iter_meter, experiment)\u001b[0m\n\u001b[1;32m     24\u001b[0m output \u001b[39m=\u001b[39m F\u001b[39m.\u001b[39mlog_softmax(output, dim\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m)\n\u001b[1;32m     25\u001b[0m output \u001b[39m=\u001b[39m output\u001b[39m.\u001b[39mtranspose(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m) \u001b[39m# (time, batch, n_class)\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m loss \u001b[39m=\u001b[39m criterion(output, labels, input_lengths, label_lengths)\n\u001b[1;32m     28\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[1;32m     30\u001b[0m experiment\u001b[39m.\u001b[39mlog_metric(\u001b[39m'\u001b[39m\u001b[39mloss\u001b[39m\u001b[39m'\u001b[39m, loss\u001b[39m.\u001b[39mitem(), step\u001b[39m=\u001b[39miter_meter\u001b[39m.\u001b[39mget())\n",
+      "File \u001b[0;32m~/anaconda3/envs/asr_project/lib/python3.9/site-packages/torch/nn/modules/module.py:1190\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1186\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1187\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1188\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1189\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1190\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1191\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1192\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/anaconda3/envs/asr_project/lib/python3.9/site-packages/torch/nn/modules/loss.py:1756\u001b[0m, in \u001b[0;36mCTCLoss.forward\u001b[0;34m(self, log_probs, targets, input_lengths, target_lengths)\u001b[0m\n\u001b[1;32m   1755\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, log_probs: Tensor, targets: Tensor, input_lengths: Tensor, target_lengths: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m-> 1756\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mctc_loss(log_probs, targets, input_lengths, target_lengths, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mblank, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mreduction,\n\u001b[1;32m   1757\u001b[0m                       \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mzero_infinity)\n",
+      "File \u001b[0;32m~/anaconda3/envs/asr_project/lib/python3.9/site-packages/torch/nn/functional.py:2628\u001b[0m, in \u001b[0;36mctc_loss\u001b[0;34m(log_probs, targets, input_lengths, target_lengths, blank, reduction, zero_infinity)\u001b[0m\n\u001b[1;32m   2621\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_variadic(log_probs, targets, input_lengths, target_lengths):\n\u001b[1;32m   2622\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m   2623\u001b[0m         ctc_loss,\n\u001b[1;32m   2624\u001b[0m         (log_probs, targets, input_lengths, target_lengths),\n\u001b[1;32m   2625\u001b[0m         log_probs, targets, input_lengths, target_lengths,\n\u001b[1;32m   2626\u001b[0m         blank\u001b[39m=\u001b[39mblank, reduction\u001b[39m=\u001b[39mreduction, zero_infinity\u001b[39m=\u001b[39mzero_infinity\n\u001b[1;32m   2627\u001b[0m     )\n\u001b[0;32m-> 2628\u001b[0m \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49mctc_loss(\n\u001b[1;32m   2629\u001b[0m     log_probs, targets, input_lengths, target_lengths, blank, _Reduction\u001b[39m.\u001b[39;49mget_enum(reduction), zero_infinity\n\u001b[1;32m   2630\u001b[0m )\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: blank must be in label range"
+     ]
+    }
+   ],
    "source": [
     "hparams = {\n",
     "    \"n_cnn_layers\": 3,\n",
@@ -757,9 +880,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COMET INFO: ---------------------------------------------------------------------------------------\n",
+      "COMET INFO: Comet.ml Experiment Summary\n",
+      "COMET INFO: ---------------------------------------------------------------------------------------\n",
+      "COMET INFO:   Data:\n",
+      "COMET INFO:     display_summary_level : 1\n",
+      "COMET INFO:     url                   : https://www.comet.com/pigeongcc/speech-recognition/2e0329fd98ed451c9d57296b8e5df5f3\n",
+      "COMET INFO:   Others:\n",
+      "COMET INFO:     Name : asr-0\n",
+      "COMET INFO:   Parameters:\n",
+      "COMET INFO:     batch_size    : 10\n",
+      "COMET INFO:     dropout       : 0.1\n",
+      "COMET INFO:     epochs        : 3\n",
+      "COMET INFO:     learning_rate : 0.0005\n",
+      "COMET INFO:     n_class       : 26\n",
+      "COMET INFO:     n_cnn_layers  : 3\n",
+      "COMET INFO:     n_feats       : 128\n",
+      "COMET INFO:     n_rnn_layers  : 5\n",
+      "COMET INFO:     rnn_dim       : 512\n",
+      "COMET INFO:     stride        : 2\n",
+      "COMET INFO:   Uploads:\n",
+      "COMET INFO:     conda-environment-definition : 1\n",
+      "COMET INFO:     conda-info                   : 1\n",
+      "COMET INFO:     conda-specification          : 1\n",
+      "COMET INFO:     environment details          : 1\n",
+      "COMET INFO:     filename                     : 1\n",
+      "COMET INFO:     git metadata                 : 1\n",
+      "COMET INFO:     installed packages           : 1\n",
+      "COMET INFO:     notebook                     : 1\n",
+      "COMET INFO:     os packages                  : 1\n",
+      "COMET INFO:     source_code                  : 1\n",
+      "COMET INFO: \n",
+      "COMET WARNING: Comet has disabled auto-logging functionality as it has been imported after the following ML modules: torch. Metrics and hyperparameters can still be logged using Experiment.log_metrics() and Experiment.log_parameters()\n",
+      "COMET INFO: Uploading metrics, params, and assets to Comet before program termination (may take several seconds)\n",
+      "COMET INFO: The Python SDK has 3600 seconds to finish before aborting...\n"
+     ]
+    }
+   ],
    "source": [
     "experiment.end()"
    ]
