Added inference code

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import torchaudio\n",
     "from comet_ml import Experiment\n",
     "import os\n",
-    "import json"
+    "import json\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
        " 1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +291,7 @@
        " [3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +773,7 @@
      "text": [
       "COMET WARNING: Comet has disabled auto-logging functionality as it has been imported after the following ML modules: torch. Metrics and hyperparameters can still be logged using Experiment.log_metrics() and Experiment.log_parameters()\n",
       "COMET WARNING: As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n",
-      "COMET INFO: Experiment is live on comet.com https://www.comet.com/pigeongcc/speech-recognition/e06f133ceeb3416281ba0666afe2b1af\n",
+      "COMET INFO: Experiment is live on comet.com https://www.comet.com/pigeongcc/speech-recognition/d66fa1176e434c4681d6b673bdc31fc3\n",
       "\n"
      ]
     },
@@ -783,7 +784,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"800px\"\n",
-       "            src=\"https://www.comet.com/pigeongcc/speech-recognition/e06f133ceeb3416281ba0666afe2b1af\"\n",
+       "            src=\"https://www.comet.com/pigeongcc/speech-recognition/d66fa1176e434c4681d6b673bdc31fc3\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -791,7 +792,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f53fc0d9c10>"
+       "<IPython.lib.display.IFrame at 0x7f53fcb1deb0>"
       ]
      },
      "metadata": {},
@@ -825,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -909,12 +910,28 @@
       ")\n",
       "Num Model Parameters 23703834\n",
       "Train Epoch: 1 [0/51088 (0%)]\tLoss: 30.011871\n",
-      "Train Epoch: 1 [12800/51088 (25%)]\tLoss: 23.236761\n",
-      "Train Epoch: 1 [25600/51088 (50%)]\tLoss: 21.698181\n",
-      "Train Epoch: 1 [38400/51088 (75%)]\tLoss: 22.825069\n",
+      "Train Epoch: 1 [12800/51088 (25%)]\tLoss: 24.620358\n",
+      "Train Epoch: 1 [25600/51088 (50%)]\tLoss: 22.977634\n",
+      "Train Epoch: 1 [38400/51088 (75%)]\tLoss: 18.508837\n",
       "\n",
       "Evaluating…\n",
-      "Test set: Average loss: 21.9236, Average CER: 1.000000\n",
+      "Test set: Average loss: 17.4064, Average CER: 1.000000\n",
+      "\n",
+      "Train Epoch: 2 [0/51088 (0%)]\tLoss: 18.304621\n",
+      "Train Epoch: 2 [12800/51088 (25%)]\tLoss: 18.630135\n",
+      "Train Epoch: 2 [25600/51088 (50%)]\tLoss: 19.398914\n",
+      "Train Epoch: 2 [38400/51088 (75%)]\tLoss: 18.686342\n",
+      "\n",
+      "Evaluating…\n",
+      "Test set: Average loss: 17.4084, Average CER: 1.000000\n",
+      "\n",
+      "Train Epoch: 3 [0/51088 (0%)]\tLoss: 18.316692\n",
+      "Train Epoch: 3 [12800/51088 (25%)]\tLoss: 18.186699\n",
+      "Train Epoch: 3 [25600/51088 (50%)]\tLoss: 18.328270\n",
+      "Train Epoch: 3 [38400/51088 (75%)]\tLoss: 19.108665\n",
+      "\n",
+      "Evaluating…\n",
+      "Test set: Average loss: 17.4054, Average CER: 1.000000\n",
       "\n"
      ]
     }
@@ -930,7 +947,7 @@
     "    \"dropout\": 0.1,\n",
     "    \"learning_rate\": 8e-6,\n",
     "    \"batch_size\": 128,\n",
-    "    \"epochs\": 1,\n",
+    "    \"epochs\": 3,\n",
     "}\n",
     "\n",
     "model = train_test(hparams, experiment)"
@@ -938,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -950,18 +967,18 @@
       "COMET INFO: ---------------------------------------------------------------------------------------\n",
       "COMET INFO:   Data:\n",
       "COMET INFO:     display_summary_level : 1\n",
-      "COMET INFO:     url                   : https://www.comet.com/pigeongcc/speech-recognition/e06f133ceeb3416281ba0666afe2b1af\n",
+      "COMET INFO:     url                   : https://www.comet.com/pigeongcc/speech-recognition/d66fa1176e434c4681d6b673bdc31fc3\n",
       "COMET INFO:   Metrics [count] (min, max):\n",
       "COMET INFO:     cer                 : 1.0\n",
-      "COMET INFO:     test_loss           : 21.923603605341032\n",
+      "COMET INFO:     test_loss [3]       : (17.405431182296187, 17.408428739618365)\n",
       "COMET INFO:     train_learning_rate : 8e-06\n",
-      "COMET INFO:     train_loss [400]    : (20.705028533935547, 33.421630859375)\n",
+      "COMET INFO:     train_loss [1200]   : (16.86372947692871, 33.420654296875)\n",
       "COMET INFO:   Others:\n",
       "COMET INFO:     Name : asr-scheduler:none-0\n",
       "COMET INFO:   Parameters:\n",
       "COMET INFO:     batch_size    : 128\n",
       "COMET INFO:     dropout       : 0.1\n",
-      "COMET INFO:     epochs        : 1\n",
+      "COMET INFO:     epochs        : 3\n",
       "COMET INFO:     learning_rate : 8e-06\n",
       "COMET INFO:     n_class       : 26\n",
       "COMET INFO:     n_cnn_layers  : 3\n",
@@ -976,15 +993,13 @@
       "COMET INFO:     environment details          : 1\n",
       "COMET INFO:     filename                     : 1\n",
       "COMET INFO:     git metadata                 : 1\n",
-      "COMET INFO:     git-patch (uncompressed)     : 1 (34.25 KB)\n",
       "COMET INFO:     installed packages           : 1\n",
       "COMET INFO:     notebook                     : 1\n",
       "COMET INFO:     os packages                  : 1\n",
       "COMET INFO:     source_code                  : 1\n",
       "COMET INFO: \n",
       "COMET WARNING: Comet has disabled auto-logging functionality as it has been imported after the following ML modules: torch. Metrics and hyperparameters can still be logged using Experiment.log_metrics() and Experiment.log_parameters()\n",
-      "COMET INFO: Uploading metrics, params, and assets to Comet before program termination (may take several seconds)\n",
-      "COMET INFO: The Python SDK has 3600 seconds to finish before aborting...\n"
+      "COMET INFO: Uploading 1 metrics, params and output messages\n"
      ]
     }
    ],
@@ -1002,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,20 +1120,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'happy'"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "model2.eval()\n",
-    "pass"
+    "sample_idx = 2000\n",
+    "\n",
+    "device, _ = get_device()\n",
+    "spectrogram, label, input_length, label_length = \\\n",
+    "    data_processing((test_dataset.__getitem__(n=sample_idx),))\n",
+    "spectrogram, label = spectrogram.to(device), label.to(device)\n",
+    "\n",
+    "word_label = text_transform.int_to_text(label.int().tolist()[0])\n",
+    "word_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model_inference = model2\n",
+    "model_inference.eval()\n",
+    "\n",
+    "output = model_inference(spectrogram)\n",
+    "output = F.log_softmax(output, dim=2)\n",
+    "\n",
+    "decoded_preds, decoded_targets = GreedyDecoder(output, label, label_length, collapse_repeated=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Target: ['happy']\n",
+      "Prediction: ['']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Target: {decoded_targets}\")\n",
+    "print(f\"Prediction: {decoded_preds}\")"
+   ]
   },
   {
    "cell_type": "code",
