--- a/model.ipynb
+++ b/model.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model will be trained on mel mel spectrograms obtained from .wav files of the dataset.\n",
+    "Model will be trained on mel spectrograms obtained from .wav files of the dataset.\n",
     "\n",
     "Spectrograms will be splitted into chunks and our model will make a prediction for each of such chunks. Each letter will last for several chunks and there is usual pause or separation between differnet letters, for this we need special `<BLANK>` token which will represent these pauses.\n",
     "\n",
