--- a/model.ipynb
+++ b/model.ipynb
@@ -8,7 +8,9 @@
     "# Authors\n",
     "\n",
     "* Sergey Golubev\n",
-    "* Andrey Vagin"
+    "* Andrey Vagin\n",
+    "\n",
+    "We have taken given [tutorial](https://www.assemblyai.com/blog/end-to-end-speech-recognition-pytorch/) as base for our task."
    ]
   },
   {
@@ -103,14 +105,6 @@
    "source": [
     "train_dataset, valid_dataset, test_dataset = download_data(DATASET_FOLDER)\n",
     "print(len(train_dataset), len(valid_dataset), len(test_dataset), )"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have taken given [tutorial](https://www.assemblyai.com/blog/end-to-end-speech-recognition-pytorch/) as base for our task."
    ]
   },
   {
