--- a/model.ipynb
+++ b/model.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import os\n",
+    "from pprint import pprint\n",
+    "\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import torch.utils.data as data\n",
-    "import torch.nn.functional as F\n",
     "import torchaudio\n",
-    "from comet_ml import Experiment\n",
-    "import os\n",
-    "import json\n",
-    "from pprint import pprint"
+    "from comet_ml import Experiment"
    ]
   },
   {
