Modified Greedy Decoder

--- a/model.ipynb
+++ b/model.ipynb
@@ -998,7 +998,7 @@
     "\ttorch.save(model.state_dict(), model_path)\n",
     "\n",
     "\twith open(hparams_path, 'w') as f:\n",
-    "\t\tjson.dump(hparams, f)\n"
+    "\t\tjson.dump(hparams, f)"
    ]
   },
   {
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
